# aip-c01-domain-1-design-vectorstore-solutions

./: .gitignore  README.md
demo-1-legal-research-rag/: .gitignore  README.md  pyproject.toml
demo-1-legal-research-rag/docs/: OPENSEARCH_DATA_INGESTION.md
demo-1-legal-research-rag/lambda_processing/: document_processor.py
demo-1-legal-research-rag/scripts/: package-lambda.sh  requirements.txt  search_and_rag.py  setup-aws-infra.sh  teardown-aws-infra.sh
demo-1-legal-research-rag/synth_data/: generate_legal_docs.py
